# scripts

./: .editorconfig  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: py-lint.yaml  shell-lint.yaml
.hooks/: pre-commit.sh
scripts/: clean_podman_cache.sh  download_bing_wallpaper.sh  extract_tar_from_rpm.sh  fix_jetbrains_markdown_preview.sh  monitor_brightness.sh  random_six_chars.sh
src/: clean_journal_logs.sh  github_repo_settings.sh  progress_bar.py  send_email.py  send_gchat_message.sh  surround_with_dash.py
