[project]
name = "scripts"
version = "0.1.0"
description = "Useful little cmd line scripts."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["build", "dist", ".venv", "venv", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes errors
    "I", # isort
]
extend-select = [
    "UP",  # pyupgrade
    "SIM", # code simplifications
    "C4",  # comprehension checks
    "RET", # return practices
    "PTH", # pathlib over os.path
]
ignore = [
    "E203", # space before ':'
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
no_error_summary = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
